login/register admins + list users endpoints + debug_mode
